--- a/2-9演習問題.html
+++ b/2-9演習問題.html
@@ -2,6 +2,7 @@
 <html lang="ja">
  <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="2-9演習問題.css" />
   <title>2-9演習問題</title>
 </head>
